# softy

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md
.github/workflows/: deploy-pages.yml
benches/: physics.rs
demo-wasm/: Cargo.toml
demo-wasm/scripts/: validate-site.sh
demo-wasm/src/: lib.rs
demo-wasm/www/: index.html  main.js
src/: chain.rs  config.rs  constraint.rs  error.rs  float.rs  grid.rs  lib.rs  observer.rs  particle.rs  softbody.rs  solver.rs  spring.rs  vec.rs
tests/: chain_tests.rs  determinism.rs  grid_tests.rs  softbody_tests.rs  spring_tests.rs  verlet_tests.rs
