[package]
name = "softy-demo"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
softy = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "Performance",
]
